--- a/README.rdoc
+++ b/README.rdoc
@@ -4,7 +4,8 @@ Ruby key value store.
 
 == Installation
 
-git clone git://github.com/jamez01/rubis.git 
+ git clone git://github.com/jamez01/rubis.git 
+ cd rubis && ruby lib/server.rb
 
 * Gem comming soon...
 
